--- a/testrssreader/www/css/style.css
+++ b/testrssreader/www/css/style.css
@@ -1,5 +1,7 @@
 /* Empty. Add your own CSS if you like */
-h2.post-title {
+h1,p, .post-title {
     white-space: normal;
-    height: 2.6em;
+    margin-right: 2px;
+	margin-left: 2px;
+	font-size: 24px;
 }
